[#167411714] Hot Fix: remove inner shadow of textarea on mobile safari

--- a/components/consumer/mobile/text-area/style.scss
+++ b/components/consumer/mobile/text-area/style.scss
@@ -18,6 +18,7 @@
           width: 100%;
           overflow: hidden;
           height: auto;
+          -webkit-appearance: none;
 
           &::placeholder {
             color: $grey-60;
